# Test

./: CMakeLists.txt  Constants.cpp  Dockerfile  FileRotator.cpp  LogFileRotator.cpp  Logging.cpp  OPA_policy.rego  mai1.tf  main.cpp  main.tf  rotate.cpp  sample1.tf  sample2.tf  sample3.tf  sonar-project.properties  stdafx.cpp  test.tf  time_format.cpp
.github/: sonar-project.properties
.github/workflows/: Automate.yml  SonarQube.yml  add_workflow.yml  add_workflow_file.yml  board.yml  branch-protection  branch-protection.yml  build.yml  first_workflow.yml  main.yml  shared_workflow.yml  terrascan.yml  tfsec.yml
Toolbox/: Configurations.cpp  Configurations.h  Constants.cpp  Log.h  Services.cpp  dummy.cpp  fingerprinter.cpp  main.cpp
